# vibespec

./: .gitignore  README.md  how-to-build-skill.md  manifest.md  pyproject.toml  vibespec-full.md
compiler/: __init__.py  build.py  incremental.py  parse.py  validate.py
docs/: CONCEPTS.md  LAYER_HIERARCHY.md  PHILOSOPHY.md  TECHNICAL_DESIGN.md
ideas/: 2026-02-08T222830_mechanizing_spec_backporting.md
ideas/archived/: 2026-02-05-multi-level-approval.md  2026-02-05-refinement-protocol.md  2026-02-05-self-contained-skill.md  2026-02-05T2246-dependency-free.md  2026-02-05T2246-timestamp-naming.md  2026-02-05T2259-session-reflection.md  2026-02-05T2323-strict-approval-gate.md  2026-02-06T0016-fine-grained-numbering.md  2026-02-06T0028-intuitive-reflection.md  2026-02-06T0036-script-first-automation.md  2026-02-06T0040-quantified-validation.md  2026-02-06T0048-algebraic-validation.md  2026-02-06T0054-post-revision-review.md  2026-02-06T0057-hierarchical-review.md  2026-02-06T0059-explicit-omission-check.md  2026-02-06T0103-comprehensive-algebraic-rules.md  2026-02-06T0106-final-compilation-protocol.md  2026-02-06T0116-minimize-cognitive-load.md  2026-02-06T0119-rejection-protocol.md  2026-02-06T0134-compiled-artifact-validation.md  2026-02-06T0138-comprehensive-compiled-validation.md  (+30 more)
schema/: USER_SPEC_FORMAT.md
scripts/: validate.py
specs/: .compiled-full-spec.md  .compiled.md  .vibe-validate-cache.json  L0-VISION.md  L1-CONTRACTS.md  L2-ARCHITECTURE.md  L3-COMPILER.md  L3-RUNTIME.md  vibe-spec-full.md
src/: SKILL.md  cli.py
tests/: test_paper_role.md
(+544 files in other folders)
